--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "socket-server",
   "version": "1.0.0",
   "description": "curso de sockets",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "dev": "nodemon dist/",
+    "start": "node dist/",
+    "lint": "eslint"
   },
   "author": "",
   "license": "ISC",
@@ -12,7 +16,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "socket.io": "^4.7.1"
+    "socket.io": "^4.7.1",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
